fixed css issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,7 @@ h1 {
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 
 .modal > div {
